tests/ui/asm/naked-with-invalid-repr-attr.stderr
error: the `repr(C)` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:10:3
   |
LL | #[repr(C)]
   |   ^^^^^^^
   |
   = help: the `repr(C)` attribute can only be applied to data types

error: the `repr(transparent)` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:17:3
   |
LL | #[repr(transparent)]
   |   ^^^^^^^^^^^^^^^^^
   |
   = help: the `repr(transparent)` attribute can only be applied to data types

error: the `repr(C)` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:24:3
   |
LL | #[repr(C)]
   |   ^^^^^^^
   |
   = help: the `repr(C)` attribute can only be applied to data types

error: the `repr(C)` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:33:3
   |
LL | #[repr(C, packed)]
   |   ^^^^^^^^^^^^^^^
   |
   = help: the `repr(C)` attribute can only be applied to data types

error: the `repr(packed)` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:33:3
   |
LL | #[repr(C, packed)]
   |   ^^^^^^^^^^^^^^^
   |
   = help: the `repr(packed)` attribute can only be applied to data types

error: the `repr(u8)` attribute cannot be used on functions
  --> $DIR/naked-with-invalid-repr-attr.rs:41:3
   |
LL | #[repr(u8)]
   |   ^^^^^^^^
   |
   = help: the `repr(u8)` attribute can only be applied to enums

error: aborting due to 6 previous errors

